<resources>
    <string name="app_name">MasterApp</string>
    <string name="textocrearsala">Crear nueva sala</string>
    <string name="textobuscarsala">Buscar sala</string>
    <string name="textosala">Sala</string>
    <string name="textovotacion">Votación</string>
    <string name="textovotado">Votado</string>
    <string name="textomaster">Master</string>
    <string name="textonombre">Nombre</string>
    <string name="textojugadores">Jugadores</string>
    <string name="textopassword">Contraseña</string>
    <string name="textoprivacidad">Privacidad</string>
    <string name="textoanonimo">Anónima</string>
    <string name="textopublico">Pública</string>
    <string name="textocapacidad">Capacidad</string>
    <string name="textobuscar">Buscar</string>
    <string name="textobuscarip">Buscar por IP</string>
    <string name="textobuscarlargo">Busqueda automática</string>
    <string name="textosalaalerttitle">¡Cuidado!</string>
    <string name="textosalaalertdialog">¿Deseas salir realmente?</string>
    <string name="textoconectar">Conectar</string>
</resources>
